--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "5.5.4",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
-    "tailwindcss": "3.4.6",
-    "postcss": "8.4.39",
-    "autoprefixer": "10.4.20"
+  "@types/node": "^22.0.0",
+  "@types/react": "^18.0.0",
+  "@types/react-dom": "^18.0.0"
   }
 }
