--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
-  "devDependencies": {
-  "@types/node": "^22.0.0",
-  "@types/react": "^18.0.0",
-  "@types/react-dom": "^18.0.0"
-  }
+"devDependencies": {
+  "tailwindcss": "^3.4.0",
+  "postcss": "^8.4.0",
+  "autoprefixer": "^10.4.0"
+}
+
 }
